objects/ProductSelectionCriteria__c.object
<CustomObject>
    <description>SFDC-4540: This object is to store criteria for identification of Legal Entity under Product Selection framework.</description>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Field to store the Account Billing Country</description>
        <label>Billing Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Product Selection Criteria</relationshipLabel>
        <relationshipName>ProductSelectionCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Store the Product Business Line</description>
        <label>Business Line</label>
        <referenceTo>BusinessLine__c</referenceTo>
        <relationshipLabel>Product Selection Criteria</relationshipLabel>
        <relationshipName>ProductSelectionCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompareCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-4540 field to suggest the rule engine to compare the currency of the product selection criteria</description>
        <label>Compare Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormerIPOwner__c</fullName>
        <description>SFDC-4540: Store the Former IP Owner of a product</description>
        <label>Former IP Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPJurisdiction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Store the Product IP Jurisdiction</description>
        <label>IP Jurisdiction</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Product Selection Criteria (IP Jurisdiction)</relationshipLabel>
        <relationshipName>ProductSelectionCriteria1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <description>SFDC-4540: Store the Media type of Product</description>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>SFDC-4540 field to capture the order in which the rule should be fired</description>
        <inlineHelpText>Order of the step  in which it will be executed</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreferredLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540 this field captures preferred legal entity if it already exist in the rule engine then skip the rule.</description>
        <label>Preferred Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Product Selection Criteria (Preffered Legal Entity)</relationshipLabel>
        <relationshipName>PreferredLegalEntities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Store the Product Group</description>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Product Selection Criteria</relationshipLabel>
        <relationshipName>ProductSelectionCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Store the Legal Entity</description>
        <label>Product Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Product Selection Criteria</relationshipLabel>
        <relationshipName>ProductSelectionCriteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>SFDC-4540: Store the account region</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepNumber__c</fullName>
        <description>SFDC-4540: Store the step number for rules</description>
        <label>Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4540: Store the Target Legal Entity</description>
        <label>Target Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Product Selection Criteria (Target Legal Entity)</relationshipLabel>
        <relationshipName>ProductSelectionCriteria1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Selection Criteria</label>
    <listViews>
        <fullName>PSC</fullName>
        <columns>NAME</columns>
        <columns>BillingCountry__c</columns>
        <columns>BusinessLine__c</columns>
        <columns>CompareCurrency__c</columns>
        <columns>FormerIPOwner__c</columns>
        <columns>IPJurisdiction__c</columns>
        <columns>MediaType__c</columns>
        <columns>Order__c</columns>
        <columns>PreferredLegalEntity__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>ProductLegalEntity__c</columns>
        <columns>Region__c</columns>
        <columns>StepNumber__c</columns>
        <columns>TargetLegalEntity__c</columns>
        <filterScope>Everything</filterScope>
        <label>PSC</label>
    </listViews>
    <nameField>
        <displayFormat>PSC-{000000}</displayFormat>
        <label>Product Selection Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Selection Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>